Updates to the component-library Modal styles for scrollbar and removing default marginTop and marginBottom for ModalContent so overflow scrolling is able to be dynamic. These updates could be applicable for all Modals that require scrollin and are based on suggestions for maintaining the SnapPrivacyWarning behavior and preventing visual regressions

--- a/ui/components/app/snaps/snap-privacy-warning/index.scss
+++ b/ui/components/app/snaps/snap-privacy-warning/index.scss
@@ -1,19 +1,16 @@
 .snap-privacy-warning {
+  &__modal-dialog {
+    max-height: 100%;
+    min-height: 300px; // prevents modal shrinking in height beyond being functional
+  }
+
   &__content {
     overflow-y: auto;
-
-    @include screen-sm-max {
-      max-height: 312px; // fits for popover view
-    }
-
+    max-height: 100%;
 
     &__scroll-button {
       position: sticky;
       bottom: 16px;
-
-      @include screen-sm-min {
-        display: none; // hides scroll button
-      }
     }
   }
 }
